[package]
name = "pallet-game"
version = "5.0.0-dev"
description = "Game pallet for defining game logic."
authors = ["Xcavate Network"]
homepage = "https://xcavate.io"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/XcavateBlockchain/Node_Hackathon_Apr2024"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.197", features = ["derive"], optional = true }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }

pallet-nfts = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
enumflags2 = { version = "0.7.7" }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false }

pallet-insecure-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"pallet-nfts/std",
	"pallet-balances/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
